Nutch Change Log

Current Development 2.4-SNAPSHOT

* NUTCH-1925 Upgrade to Apache Tika 1.7 (Tyler Palsulich via markus)

* NUTCH-1924 Nutch + HBase Docker (Radosław Stankiewicz via lewismc)

* NUTCH-1920 Upgrade Nutch to use Java 1.7 (lewismc)

* NUTCH-1893 Parse-tika failes to parse feed files (Mengying Wang via snagel)

Nutch 2.3 Release 08012015 (ddmmyyyy)
Release Report - http://s.apache.org/nutch_2.3

* NUTCH-1779 Apply formatting to the code (lewismc)

* NUTCH-1907 Incorrect output of Outlinks to Hosts within HostDbUpdateReducer (lewismc)

* NUTCH-1856 Document webpage.avsc and host.avsc (lewismc)

* NUTCH-1834 GeneratorMapper behavior depends on log level (Gerhard Gossen via snagel)

* NUTCH-1899 upgrade restlet lib to prevent build failure (talat)

* NUTCH-1797 remove unused package o.a.n.html (Saurabh Chhajed via snagel)

* NUTCH-1888 Specify HTMLMapper to use in TikaParser (Halil Simsek via jnioche)

* NUTCH-1897 Easier debugging of plugin XML errors (markus)

* NUTCH-1823 Upgrade to elasticsearch 1.4.1 (Phu Kieu, markus, lewismc)

* NUTCH-1829 Generator : unable to distinguish real errors (Mathieu Bouchard, jnioche, snagel)

* NUTCH-1778 Generator not logging number of URLs in batch correctly (jnioche via snagel)

* NUTCH-1877 Suffix URL filter to ignore query string by default (markus via snagel)

* NUTCH-1825 protocol-http may hang for certain web pages (Phu Kieu via snagel)

* NUTCH-1483 Can't crawl filesystem with protocol-file plugin (Rogério Pereira Araújo, Mengying Wang, snagel)

* NUTCH-1885 Protocol-file should treat symbolic links as redirects (Mengying Wang, snagel)

* NUTCH-1880 URLUtil should not add additional slashes for file URLs (snagel)

* NUTCH-1879 Regex URL normalizer should remove multiple slashes after file: protocol (snagel)

* NUTCH-1820 remove field "orig" which duplicates "id" (lewismc, snagel)

* NUTCH-1843 Upgrade to Gora 0.5 (talat, lewismc, Kiril Menshikov, drazzib)
